syntax = "proto3";

//this will translate into C# namespace
package Services;

message Temperature {
  float value = 1 ;
}

//this is used for calls that do accept inputs or produce outputs
message Empty {    
}

//this will translate into service and service client stubs
service Room {    
	//these will translate into a service operations
  rpc Cool(Temperature) returns (BoolMsg);
  rpc Heat(Temperature) returns (BoolMsg);
  rpc CanCool(Empty) returns (BoolMsg);
  rpc CanHeat(Empty) returns (BoolMsg);
  rpc GetCurrentTemperature(Empty) returns (Temperature);


	// rpc GetUniqueId(Empty) returns (IntMsg);
	// rpc GetLightState(Empty) returns (GetLightStateOutput);
	// rpc Queue(CarDesc) returns (BoolMsg);
	// rpc IsFirstInLine(IntMsg) returns (BoolMsg);
	// rpc Pass(CarDesc) returns (PassAttemptResult);
}

message BoolMsg {
	bool value = 1;
}